add details modal, shaka custom overlay, css styles

--- a/src/components/mainpage/ContentCard/ContentCard.css
+++ b/src/components/mainpage/ContentCard/ContentCard.css
@@ -4,8 +4,8 @@
   position: relative;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  padding-left: 20px;
-  padding-right: 80px;
+  padding-left: 40px;
+  padding-right: 100px;
   padding-top: 80px;
   -ms-grid-columns: (minmax(220px, 220px))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(220px, 220px));
@@ -13,7 +13,8 @@
 
 .content-card h1 {
   position: absolute;
-  left: 70px;
+  top: 20px;
+  left: 100px;
   color: white;
 }
 
@@ -25,8 +26,9 @@
 
 .content-card p {
   position: relative;
-  top: -10px;
   color: white;
+  width: 200px;
+  font-size: 18px;
 }
 
 .content-card img {
@@ -34,8 +36,37 @@
 }
 
 .loading {
-  height: 100%;
+  line-height: 356px;
+  color: white;
+  font-size: 50px;
+  text-align: center;
   background: #171e2e;
   width: 100%;
+}
+
+@media (max-width: 817px) {
+  .content-card {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    overflow-y: scroll;
+    -webkit-box-pack: right;
+        -ms-flex-pack: right;
+            justify-content: right;
+    padding-left: 0;
+  }
+  .content-card li {
+    margin: 10px 10px;
+  }
+  .content-card li:first-of-type {
+    padding-left: 10px;
+  }
+  .content-card h1 {
+    left: 20px;
+  }
 }
 /*# sourceMappingURL=ContentCard.css.map */
