--- a/src/components/mainpage/ContentCard/ContentCard.scss
+++ b/src/components/mainpage/ContentCard/ContentCard.scss
@@ -1,32 +1,56 @@
 .content-card {
-    display: grid;
+  display: grid;
+  position: relative;
+  justify-content: space-around;
+  padding-left: 40px;
+  padding-right: 100px;
+  padding-top: 80px;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 220px));
+  h1 {
+    position: absolute;
+    top: 20px;
+    left: 100px;
+    color: white;
+  }
+  li {
+    list-style: none;
+    margin: 0px 50px;
+    height: 356px;
+  }
+  p {
     position: relative;
-    justify-content: space-around;
-    padding-left: 20px;
-    padding-right: 80px;
-    padding-top: 80px;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 220px));
-    h1 {
-        position: absolute;
-        left: 70px;
-        color: white;
-    }
-    li {
-        list-style: none;
-        margin: 0px 50px;
-        height: 356px;
-    }
-    p{
-        position: relative;
-        top: -10px;
-        color: white;
-    }
-    img {
-        cursor: pointer;
-    }
+    color: white;
+    width: 200px;
+    font-size: 18px;
+  }
+  img {
+    cursor: pointer;
+  }
 }
 .loading {
-    height: 100%;
-    background: rgb(23, 30, 46);
-    width: 100%;
+  line-height: 356px;
+  color: white;
+  font-size: 50px;
+  text-align: center;
+  background: rgb(23, 30, 46);
+  width: 100%;
+}
+
+@media (max-width: 817px) {
+  .content-card {
+    display: flex;
+    flex-direction: row;
+    overflow-y: scroll;
+    justify-content: right;
+    padding-left: 0;
+    li {
+      margin: 10px 10px;
+    }
+    li:first-of-type {
+      padding-left: 10px;
+    }
+    h1 {
+      left: 20px;
+    }
+  }
 }
