--- a/src/components/mainpage/ContentCard/buttons/ButtonNext.scss
+++ b/src/components/mainpage/ContentCard/buttons/ButtonNext.scss
@@ -8,6 +8,13 @@
     background: none;
     img {
         height: 46px;
-        margin-left: 8px;
+        margin-right: 12px;
+    }
+}
+
+@media (max-width: 817px) {
+    .btn-next {
+        position: relative;
+        transform: translate(0, 100%);
     }
 }
