--- a/src/components/mainpage/ContentCard/buttons/ButtonPrev.css
+++ b/src/components/mainpage/ContentCard/buttons/ButtonPrev.css
@@ -1,4 +1,4 @@
-.btn-prev {
+#btn-disabled {
   position: absolute;
   height: 100px;
   top: 50%;
@@ -8,10 +8,30 @@
   background: none;
 }
 
-.btn-prev img {
+#btn-disabled img {
   height: 46px;
-  margin-left: 8px;
+  margin-left: 12px;
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
+  -webkit-filter: brightness(30%);
+          filter: brightness(30%);
+}
+
+.btn-prev img {
+  -webkit-filter: brightness(100%) !important;
+          filter: brightness(100%) !important;
+}
+
+@media (max-width: 817px) {
+  #btn-disabled {
+    display: none;
+  }
+  .btn-prev {
+    display: block !important;
+    position: relative !important;
+    -webkit-transform: translate(0, 100%) !important;
+            transform: translate(0, 100%) !important;
+    padding-right: 10px;
+  }
 }
 /*# sourceMappingURL=ButtonPrev.css.map */
