--- a/src/components/mainpage/ContentCard/buttons/ButtonPrev.scss
+++ b/src/components/mainpage/ContentCard/buttons/ButtonPrev.scss
@@ -1,4 +1,4 @@
-.btn-prev {
+#btn-disabled {
     position: absolute;
     height: 100px;
     top: 50%;
@@ -7,7 +7,24 @@
     background: none;
     img {
         height: 46px;
-        margin-left: 8px;
+        margin-left: 12px;
         transform: rotate(180deg);
+        filter: brightness(30%);
+    }
+}
+.btn-prev {
+    img {
+        filter: brightness(100%) !important;
+    }
+}
+@media (max-width: 817px) {
+    #btn-disabled {
+        display: none;
+    }
+    .btn-prev {
+        display: block !important; 
+        position: relative !important;
+        transform: translate(0, 100%) !important;
+        padding-right: 10px;
     }
 }
